[tool.poetry]
name = "appdaemon-helper"
version = "1.1"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
appdaemon = "^4.1.0"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
autopep8 = "^1.6.0"
pytest = "^6.2.5"
mock = "^4.0.3"
appdaemontestframework = { file = "/mnt/d/github/Appdaemon-Test-Framework/dist/appdaemontestframework-4.0.0b5-py3-none-any.whl" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
